--- a/src/styles/StoryPage.module.scss
+++ b/src/styles/StoryPage.module.scss
@@ -13,6 +13,6 @@
         margin-right: $toc_width; // only save space if the toc is visible
     }
     overflow-x: hidden;
-    padding-top: 56px;
-    padding-bottom: 10rem;
+    padding-top: 32px; // smaller than the XD because it looks better on mobile
+    padding-bottom: 56px;
 }
